--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,16 +60,70 @@ jobs:
           npm run test --if-present
 
   # =========================
+  # Build & Push Backend Image (หลังผ่าน unit test)
+  # =========================
+  docker-backend:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test]   # ❗ เปลี่ยน: ไม่รอ e2e แล้ว
+    if: github.event_name == 'push'        # ไม่ต้อง build/push ตอน PR
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Backend
+          push: true
+          tags: |
+            1tsh4dowz/devops-backend:${{ github.sha }}
+            1tsh4dowz/devops-backend:latest
+
+  # =========================
+  # Build & Push Frontend Image (หลังผ่าน unit test)
+  # =========================
+  docker-frontend:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test]   # ❗ เปลี่ยน: ไม่รอ e2e แล้ว
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & Push Frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Frontend
+          push: true
+          build-args: |
+            VITE_API_URL=http://localhost:8080
+          tags: |
+            1tsh4dowz/devops-frontend:${{ github.sha }}
+            1tsh4dowz/devops-frontend:latest
+
+  # =========================
   # E2E + Cypress (รันทุกเทสต์เหมือน local)
   # =========================
   e2e:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    # ❗ เปลี่ยน: ให้ e2e รัน "หลังจาก" Docker build เสร็จ
+    needs: [backend-test, frontend-test, docker-backend, docker-frontend]
 
     steps:
       - uses: actions/checkout@v4
 
-      # ใช้ docker compose dev stack เหมือนที่รันบนเครื่อง
+      # (option เสริม) ถ้า docker-compose ของคุณใช้ image จาก Docker Hub
+      # docker compose up -d จะดึง image ที่พึ่ง push ไปเมื่อกี้มาใช้
       - name: Start full stack with docker compose
         run: |
           docker compose up -d
@@ -96,7 +150,6 @@ jobs:
               echo "==========================="
               echo "Backend Logs"
               echo "==========================="
-              # เผื่อ service name มีทั้ง backend หรือ spring-backend
               docker compose logs backend || docker compose logs spring-backend || true
               exit 1
             fi
@@ -172,7 +225,6 @@ jobs:
           curl -fsS http://localhost:8080/actuator/health
           curl -fsS http://localhost:5173 > /dev/null
 
-      # รัน Cypress ทุกเทสต์ (รวม A0) – ถ้าอยากกรองทีหลังค่อยมาแก้ spec เอาได้
       - name: Run Cypress E2E Tests (all specs)
         working-directory: Frontend
         env:
@@ -215,58 +267,6 @@ jobs:
       - name: Shutdown
         if: always()
         run: docker compose down -v
-
-  # =========================
-  # Build & Push Backend Image (หลังผ่าน test + e2e)
-  # =========================
-  docker-backend:
-    runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test, e2e]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Backend
-          push: true
-          tags: |
-            1tsh4dowz/devops-backend:${{ github.sha }}
-            1tsh4dowz/devops-backend:latest
-
-  # =========================
-  # Build & Push Frontend Image (หลังผ่าน test + e2e)
-  # =========================
-  docker-frontend:
-    runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test, e2e]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Docker Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build & Push Frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Frontend
-          push: true
-          build-args: |
-            VITE_API_URL=http://localhost:8080
-          tags: |
-            1tsh4dowz/devops-frontend:${{ github.sha }}
-            1tsh4dowz/devops-frontend:latest
 
   # =========================
   # CD: Deploy to local Docker Desktop Kubernetes (self-hosted runner)
